--- a/LivrariaBrugnars/packages.config
+++ b/LivrariaBrugnars/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="4.6.2" targetFramework="net46" />
   <package id="Bot.Builder.Extensions" version="3.9.1" targetFramework="net46" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net46" />
+  <package id="Microsoft.AdaptiveCards" version="0.5.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
@@ -10,6 +11,7 @@
   <package id="Microsoft.Bot.Builder" version="3.12.2.4" targetFramework="net46" />
   <package id="Microsoft.Bot.Builder.CognitiveServices" version="1.1.2" targetFramework="net46" />
   <package id="Microsoft.Bot.Connector" version="3.12.2.4" targetFramework="net46" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Logging" version="5.2.0" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Protocols" version="5.2.0" targetFramework="net46" />
