--- a/LivrariaBrugnars/LivrariaBrugnars.csproj
+++ b/LivrariaBrugnars/LivrariaBrugnars.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Cotacao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
