--- a/LivrariaBrugnars/LivrariaBrugnars.csproj
+++ b/LivrariaBrugnars/LivrariaBrugnars.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Dialogs\LivroDialog.cs" />
     <Compile Include="Dialogs\QnaDialog.cs" />
     <Compile Include="Dialogs\RootDialog.cs" />
+    <Compile Include="Form\Pedido.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
