Módulo 04 - Chamada de form ao digitar comprar

--- a/LivrariaBrugnars/Web.config
+++ b/LivrariaBrugnars/Web.config
@@ -11,6 +11,14 @@
     <add key="MicrosoftAppPassword" value="" />
     <add key="QnaSubscriptionKey" value="f670e6e2b04542a1961862f261050e03" />
     <add key="QnaKnowledgebaseId" value="8db3b5fc-8e3e-480d-8ba7-6ae744ba7ed5" />
+  
+  <!-- API de Recomendação -->
+    <add key="RecommendationKey" value="237d1132aa334a7b99f02b4a69c4593a"/>
+    <add key="RecommendationUri" value="https://westus.api.cognitive.microsoft.com/recommendations/v4.0"/>
+    <add key="RecommendationModelId" value=""/>
+    <add key="RecommendationBuildId" value=""/>
+    <add key="RecommendationNumberOfResults" value="2"/>
+  
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
