--- a/LivrariaBrugnars/bin/Bot Application.dll.config
+++ b/LivrariaBrugnars/bin/Bot Application.dll.config
@@ -11,6 +11,11 @@
     <add key="MicrosoftAppPassword" value="" />
     <add key="QnaSubscriptionKey" value="f670e6e2b04542a1961862f261050e03" />
     <add key="QnaKnowledgebaseId" value="8db3b5fc-8e3e-480d-8ba7-6ae744ba7ed5" />
+  
+  <!-- API de Emoção -->
+    <add key="EmotionApiKey" value="f5a93d6c00d743e5aa013b14a3e49e9e"/>
+    <add key="EmotionApiUri" value="https://westus.api.cognitive.microsoft.com/emotion/v1.0/recognize"/>
+  
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
