--- a/LivrariaBrugnars/LivrariaBrugnars.csproj
+++ b/LivrariaBrugnars/LivrariaBrugnars.csproj
@@ -144,7 +144,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Cotacao.cs" />
+    <Compile Include="Models\Modelo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Servicos.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
