--- a/LivrariaBrugnars/LivrariaBrugnars.csproj
+++ b/LivrariaBrugnars/LivrariaBrugnars.csproj
@@ -152,6 +152,8 @@
     <Content Include="packages.config">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\LivrariaBrugnars2018 - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
