--- a/LivrariaBrugnars/bin/Bot Application.dll.config
+++ b/LivrariaBrugnars/bin/Bot Application.dll.config
@@ -6,9 +6,10 @@
 <configuration>
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
-    <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="" />
-    <add key="MicrosoftAppPassword" value="" />
+    <add key="BotId" value="LivrariaBrugnars2018" />
+    <add key="MicrosoftAppId" value="942c3567-63cd-4cad-ad21-ca68bfc66c71" />
+    <add key="MicrosoftAppPassword" value="jZrC4*nd1{QSjKz*" />
+    
     <add key="QnaSubscriptionKey" value="f670e6e2b04542a1961862f261050e03" />
     <add key="QnaKnowledgebaseId" value="8db3b5fc-8e3e-480d-8ba7-6ae744ba7ed5" />
   
@@ -16,6 +17,8 @@
     <add key="EmotionApiKey" value="f5a93d6c00d743e5aa013b14a3e49e9e"/>
     <add key="EmotionApiUri" value="https://westus.api.cognitive.microsoft.com/emotion/v1.0/recognize"/>
   
+   
+    
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
